# Order-Execution-and-Management-System-main

./: CMakeLists.txt  README.md
include/: APIClient.h  CancelOrder.h  ClientSession.h  DeribitAPI.h  GetOrderBook.h  GetPositions.h  HFTClient.h  ModifyOrder.h  PlaceOrder.h  WebSocket.h
src/: APIClient.cpp  CancelOrder.cpp  ClientSession.cpp  DeribitAPI.cpp  GetOrderBook.cpp  GetPositions.cpp  HFTClient.cpp  ModifyOrder.cpp  PlaceOrder.cpp  WebSocket.cpp  main.cpp
